# radom_number_generator

./: .gitmodules  CMakeLists.txt  README.md  build.sh
dep/: CMakeLists.txt
include/: client_main.h  server_main.h  utilities.h
src/: client_main.c  server_main.c  utilites.c
